# monopoly-game-mcp-server

./: .gitignore  Makefile  docker-compose.yml  test.txt
backend/: .dockerignore  Dockerfile  Procfile  README.md  mcp_server.py  pyproject.toml  railway.json  railway_entrypoint.py  render.yaml
backend/agents/: __init__.py  agent_config.py  game_orchestrator.py
backend/api/: routes.py
backend/game/data/: card_decks.py  game_persistence.py  player.py  property.py  tiles.py
backend/game/logic/: game_engine.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIReasoningPanel.tsx  ActionsPanel.tsx  AgentLobby.tsx  DiceDisplay.tsx  GameBoard.tsx  GameStats.tsx  GameView.tsx  Lobby.tsx  MessageLog.tsx  PlayerPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: game.ts
