[project]
name = "monopoly-game-remote-mcp-server"
version = "0.1.0"
description = "A Monopoly game server with MCP, REST API, and WebSocket support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.3",
    "uvicorn>=0.38.0",
    "fastapi>=0.115.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
